tests/ui/enum_prefix_missing.stderr
error: proc-macro derive panicked
 --> tests/ui/enum_prefix_missing.rs:3:10
  |
3 | #[derive(Display)]
  |          ^^^^^^^
  |
  = help: message: Missing doc comment on enum with #[prefix_enum_doc_attributes]. Please remove the attribute or add a doc comment to the enum itself.

error[E0277]: `TestType` doesn't implement `std::fmt::Display`
  --> tests/ui/enum_prefix_missing.rs:13:37
   |
13 | static_assertions::assert_impl_all!(TestType: core::fmt::Display);
   |                                     ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `std::fmt::Display` is not implemented for `TestType`
  --> tests/ui/enum_prefix_missing.rs:5:1
   |
 5 | enum TestType {
   | ^^^^^^^^^^^^^
note: required by a bound in `assert_impl_all`
  --> tests/ui/enum_prefix_missing.rs:13:1
   |
13 | static_assertions::assert_impl_all!(TestType: core::fmt::Display);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the macro `static_assertions::assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)
